--- a/src/styles/sidebar/sidebar.scss
+++ b/src/styles/sidebar/sidebar.scss
@@ -54,7 +54,7 @@
 	border: none;
 
 	font-weight: 500;
-	font-size: 1.1rem;
+	font-size: 16px;
 
 	padding: 0.2rem 0.5rem;
 	width: 100%;
@@ -72,6 +72,7 @@
 	border: none;
 	padding: 0.35rem 1rem;
 	width: 90%;
+	font-size: 16px;
 
 	background-color: $backThird;
 }
